# Boids

./: Cargo.toml
src/: boid.rs  lib.rs  main.rs  render.rs  vertex.rs
