[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
winit = "0.28"
wgpu = "0.18"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = { version = "1.12", features = [ "derive" ] }
rand = "0.8.5"
